<resources>
    <string name="app_name">Anh Se Yeu Em Tu Cai Nhin Dau Tien</string>
    <string name="app_name_vn">Anh sẽ yêu em từ cái nhìn đầu tiên</string>

    <string name="link_gg_drive"><![CDATA[https://drive.google.com/uc?export=download&id=1femuL17MUTz7t0yqUkMWB5yCea1W6kqI]]></string><!--no need to edit this-->
    <string name="link_cover"><![CDATA[https://live.staticflickr.com/4380/35997985613_8fd2eab2d9_c.jpg]]></string>

<!--    https://apps.admob.com/v2/apps/2102390982/overview-->
    <string name="str_b">ca-app-pub-3165963943681013/1910819292</string>
    <string name="str_f">ca-app-pub-3165963943681013/6971574284</string>
    <string name="str_reward">ca-app-pub-3165963943681013/9406165930</string>
    <string name="str_app_id">ca-app-pub-3165963943681013~2102390982</string>

<!--    <string name="str_b">a</string>-->
<!--    <string name="str_f">a</string>-->
<!--    <string name="str_reward">a</string>-->
<!--    <string name="str_app_id">a</string>-->

    <string name="deny">Từ chối</string>
    <string name="yes">Đồng ý</string>
    <string name="setting">Cài đặt</string>
    <string name="need_permisson">Cần quyền truy cập</string>
    <string name="need_permisson_to_use_app">Vui lòng cấp quyền để có thể sử dụng app.</string>
    <string name="app_is_not_ready">Ứng dụng tạm thời chưa khả dụng, vui lòng thử lại sau.</string>
    <string name="check_ur_connection">Vui lòng kiểm tra kết nối của bạn</string>
    <string name="warning">Thông báo</string>
    <string name="press_again_to_exit">Nhấn lần nữa để thoát ứng dụng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rate_app">Đánh giá</string>
    <string name="more_app">Thêm ứng dụng</string>
    <string name="facebook_fanpage">Facebook fanpage</string>
    <string name="share_app">Chia sẻ</string>
    <string name="gallery">Thư viện ảnh</string>
    <string name="gallery_18">Thư viện ảnh 18+</string>
    <string name="home">Trang chủ</string>
    <string name="exit">Thoát</string>
    <string name="try_again">Thử lại</string>
    <string name="right_drawer">Right Drawer</string>
    <string name="dark_theme">Chủ đề tối</string>
    <string name="book_mark_success">Đã đánh dấu vị trí đọc thành công</string>
</resources>
