<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navGallery"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/gallery" />

        <item
            android:id="@+id/navRateApp"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/navMoreApp"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/more_app" />
        <item
            android:id="@+id/navFacebookFanPage"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/facebook_fanpage" />
        <item
            android:id="@+id/navShareApp"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/share_app" />
    </group>

</menu>
